--- a/as5css.css
+++ b/as5css.css
@@ -40,7 +40,7 @@ nav ul li a{
     font-weight: 400;
 }
 
-.logo-btn{
+.login-btn{
     text-decoration: none;
     color: #333;
     margin-right: 15px;
@@ -63,11 +63,10 @@ nav ul li a{
 .content{
     margin-top: 10%;
     max-width: 600px;
-    padding: 10px 10%;
 }
 
 .content h1{
-    font-size: 0px;
+    font-size: 70px;
     color: #222;
 }
 
